# Reaper-MCP

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  install.bat  install.sh  pyproject.toml  smithery.yaml
docs/: ARCHITECTURE.md  INSTALLATION.md  PROJECT_SETUP.md  TOOLS.md
reaper_mcp/: cc_map.py  main.py  reaper_client.py  safety.py  shorthand.py  tool_registry.py
reaper_mcp/instructions/: 00_core.md  __init__.py
reaper_mcp/mix_engine/: __init__.py  detect.py  fix_mix.py  fx_inventory.py  master.py  plugins.py  profiles.py  profiles_v2.py
reaper_mcp/mix_engine/catalog/: __init__.py  _shared.py  edm.py  electronic.py  funk_soul.py  jazz.py  orchestral.py  pop.py  rock.py
reaper_mcp/tools/: analysis_tools.py  chops_tools.py  compose_edit_tools.py  compose_helpers.py  compose_tools.py  demo_tools.py  envelope_tools.py  fx_tools.py  inventory_tools.py  item_tools.py  loops_tools.py  marker_tools.py  midi_tools.py  mix_tools.py  patterns_tools.py  pipeline_tools.py  project_tools.py  quantize_tools.py  selection_tools.py  send_tools.py  sidechain_tools.py  take_tools.py  template_tools.py  tempo_tools.py  track_tools.py  transport_tools.py
reaper_mcp_shared/: __init__.py  constants.py  error_codes.py  path_safety.py  protocol.py
reaper_scripts/: reaper_mcp_server.eel  reaper_mcp_server.lua
tests/: test_mix_engine_formulas.py  test_patterns_tools.py  test_safety.py  test_shorthand.py  test_tool_registry.py  test_wsl_detection.py
